@@ -3,6 +3,8 @@ osso-af-startup (1.3-1) unstable; urgency=low
   * Fixed dbus-sessionbus.sh to use dsmetool.
   * Fixed the first-boot restarting script (N#23037).
   * Appended user name to DBus address file for multi-user Scratchbox.
+  * Added LAUNCHWRAPPER_NICE_KILL that is indentical to ..._NICE
+    except that it uses the KILL signal when stopping.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 17 Feb 2006 17:41:30 +0200
 
